feat: Enhance LMS with new question types, course management features, and proctoring improvements
- Added new question types: TRUE_FALSE, ESSAY, IMAGE_BASED, UPLOAD_ANSWER
- Updated Question, CreateQuestionRequest, and UpdateQuestionRequest interfaces to include new fields
- Introduced CourseStatus for better course management
- Enhanced CourseResponse and CourseDetailResponse with additional fields
- Implemented TopicWithChaptersResponse for detailed topic information
- Improved ChapterResponse and CreateChapterRequest with new content types and fields
- Updated ProctoringModelLoader to use dynamic imports for TensorFlow
- Enhanced README with detailed content management features and recent updates
- Added cookies.txt for HTTP cookie management
- Created schema.sql for the complete database schema of the LMS